Set Main AppBar UI

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72",
   "devDependencies": {
+    "sass": "^1.77.8",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.6.13"
   }
