--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "dayjs": "^1.11.12",
     "nuxt": "^3.12.4",
     "vue": "latest",
     "vue-animated-counter": "^0.3.0"
