--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "dayjs": "^1.11.12",
+    "moment": "^2.30.1",
     "nuxt": "^3.12.4",
+    "pocketbase": "^0.25.0",
     "vue": "latest",
     "vue-animated-counter": "^0.3.0"
   },
